# pybin

./: Cargo.toml  README.md
.github/workflows/: release.yml
docs/: validated-uv-conda-pack-topology.md
fixtures/demo-app/: pyproject.toml
fixtures/demo-app/src/demo_app/: cli.py
fixtures/requirements-app/: requirements.txt
fixtures/requirements-app/req_app/: cli.py
src/: build.rs  cli.rs  lib.rs  logging.rs  main.rs  packer.rs  plan.rs  project.rs  sfx.rs
src/commands/: build.rs  doctor.rs  inspect.rs  mod.rs
src/runner/: executor.rs  extractor.rs  mod.rs
tests/: e2e_build_fixture.rs  project_python_resolution.rs  runner_smoke.rs
