[package]
name = "pybin"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }
dirs = "6.0"
flate2 = "1.1"
indicatif = "0.17"
miette = { version = "7.4", features = ["fancy"] }
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.23"
tar = "0.4"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
